<resources>
    <string name="app_name">Funny Prank Sounds</string>
    <string name="title_home">Home</string>
    <string name="title_favourites">Favourites</string>
    <string name="sound_icon">Sound icon</string>
    <string name="loop_button">Loop button</string>
    <string name="play_button">Play button</string>
    <string name="play_instantly">Play instantly</string>
    <string name="play_after_5s">Play after 5s</string>
    <string name="play_after_10s">Play after 10s</string>
    <string name="play_after_15s">Play after 15s</string>
    <string name="play_after_20s">Play after 20s</string>
    <string name="play_after_30s">Play after 30s</string>
    <string name="play_after_40s">Play after 40s</string>
    <string name="play_after_50s">Play after 50s</string>
    <string name="play_after_60s">Play after 60s</string>
    <string name="funny_sounds">Funny Sounds</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="languages">Languages</string>
    <string name="favourites">Favourites</string>
    <string name="language">Language</string>
    <string name="fart">Fart</string>
    <string name="scary_voices">Scary</string>
    <string name="hair_trimmer">Hair Trimmer</string>
    <string name="toilet_flushing">Toilet Flushing</string>
    <string name="gun">Gun</string>
    <string name="air_horn">Air Horn</string>
    <string name="dog">Dog</string>
    <string name="breaking">Breaking</string>
    <string name="car_horns">Car Horns</string>
    <string name="burp_sounds">Burp Sounds</string>
    <string name="creaking_door">Creaking Door</string>
    <string name="snoring">Snoring</string>
    <string name="whistle">Whistle</string>
    <string name="police_siren">Police Siren</string>
    <string name="man_crying">Crying Man</string>
    <string name="door_bell">Doorbell</string>
    <string name="baby_crying">Crying Baby</string>
    <string name="woman_crying">Crying Woman</string>
    <string name="man_sneeze">Man Sneeze</string>
    <string name="woman_sneeze">Woman Sneeze</string>
    <string name="baby_sneeze">Baby Sneeze</string>
    <string name="man_laughing">Laughing Man</string>
    <string name="woman_laughing">Laughing Woman</string>
    <string name="baby_laughing">Laughing Baby</string>
    <string name="fart_1">Fart 1</string>
    <string name="failed_to_load_native_ad_with_error">Failed to load native ad with error %1$s</string>
    <string name="loop_on">Loop on</string>
    <string name="loop_off">Loop off</string>
    <string name="english">English</string>
    <string name="urdu">اردو</string>
    <string name="hindi">हिंदी</string>
    <string name="arabic">عربي</string>
    <string name="spanish">Español</string>
    <string name="portuguese">Português</string>
    <string name="chinese">中国人</string>
    <string name="dutch">Nederlands</string>
    <string name="fart_2">Fart 2</string>
    <string name="fart_3">Fart 3</string>
    <string name="fart_4">Fart 4</string>
    <string name="fart_5">Fart 5</string>
    <string name="fart_6">Fart 6</string>
    <string name="fart_7">Fart 7</string>
    <string name="fart_8">Fart 8</string>
    <string name="scary_1">Scary 1</string>
    <string name="scary_2">Scary 2</string>
    <string name="scary_3">Scary 3</string>
    <string name="scary_4">Scary 4</string>
    <string name="scary_5">Scary 5</string>
    <string name="scary_6">Scary 6</string>
    <string name="scary_7">Scary 7</string>
    <string name="scary_8">Scary 8</string>
    <string name="scary_9">Scary 9</string>
    <string name="scary_10">Scary 10</string>
    <string name="scary_11">Scary 11</string>
    <string name="scary_12">Scary 12</string>
    <string name="scary_13">Scary 13</string>
    <string name="trimmer_1">Trimmer 1</string>
    <string name="trimmer_2">Trimmer 2</string>
    <string name="trimmer_3">Trimmer 3</string>
    <string name="flushing_1">Flushing 1</string>
    <string name="flushing_2">Flushing 2</string>
    <string name="flushing_3">Flushing 3</string>
    <string name="flushing_4">Flushing 4</string>
    <string name="gun_1">Gun 1</string>
    <string name="gun_2">Gun 2</string>
    <string name="gun_3">Gun 3</string>
    <string name="gun_4">Gun 4</string>
    <string name="gun_5">Gun 5</string>
    <string name="gun_6">Gun 6</string>
    <string name="gun_7">Gun 7</string>
    <string name="air_horn_1">Air Horn 1</string>
    <string name="air_horn_2">Air Horn 2</string>
    <string name="air_horn_3">Air Horn 3</string>
    <string name="air_horn_4">Air Horn 4</string>
    <string name="air_horn_5">Air Horn 5</string>
    <string name="air_horn_6">Air Horn 6</string>
    <string name="dog_1">Dog 1</string>
    <string name="dog_2">Dog 2</string>
    <string name="dog_3">Dog 3</string>
    <string name="dog_4">Dog 4</string>
    <string name="dog_5">Dog 5</string>
    <string name="dog_6">Dog 6</string>
    <string name="dog_7">Dog 7</string>
    <string name="breaking_1">Breaking 1</string>
    <string name="breaking_2">Breaking 2</string>
    <string name="breaking_3">Breaking 3</string>
    <string name="breaking_4">Breaking 4</string>
    <string name="car_horn_1">Car Horn 1</string>
    <string name="car_horn_2">Car Horn 2</string>
    <string name="car_horn_3">Car Horn 3</string>
    <string name="car_horn_4">Car Horn 4</string>
    <string name="car_horn_5">Car Horn 5</string>
    <string name="burp_1">Burp 1</string>
    <string name="burp_2">Burp 2</string>
    <string name="burp_3">Burp 3</string>
    <string name="burp_4">Burp 4</string>
    <string name="creaking_1">Creaking 1</string>
    <string name="creaking_2">Creaking 2</string>
    <string name="creaking_3">Creaking 3</string>
    <string name="creaking_4">Creaking 4</string>
    <string name="creaking_5">Creaking 5</string>
    <string name="snoring_1">Snoring 1</string>
    <string name="snoring_2">Snoring 2</string>
    <string name="snoring_3">Snoring 3</string>
    <string name="snoring_4">Snoring 4</string>
    <string name="snoring_5">Snoring 5</string>
    <string name="whistle_1">Whistle 1</string>
    <string name="whistle_2">Whistle 2</string>
    <string name="whistle_3">Whistle 3</string>
    <string name="siren_1">Siren 1</string>
    <string name="siren_2">Siren 2</string>
    <string name="siren_3">Siren 3</string>
    <string name="siren_4">Siren 4</string>
    <string name="siren_5">Siren 5</string>
    <string name="door_bell_1">Doorbell 1</string>
    <string name="door_bell_2">Doorbell 2</string>
    <string name="door_bell_3">Doorbell 3</string>
    <string name="door_bell_4">Doorbell 4</string>
    <string name="door_bell_5">Doorbell 5</string>
    <string name="door_bell_6">Doorbell 6</string>
    <string name="crying_baby_1">Crying Baby 1</string>
    <string name="crying_baby_2">Crying Baby 2</string>
    <string name="crying_baby_3">Crying Baby 3</string>
    <string name="crying_baby_4">Crying Baby 4</string>
    <string name="crying_baby_5">Crying Baby 5</string>
    <string name="crying_baby_6">Crying Baby 6</string>
    <string name="crying_baby_7">Crying Baby 7</string>
    <string name="crying_baby_8">Crying Baby 8</string>
    <string name="crying_man_1">Crying Man 1</string>
    <string name="crying_man_2">Crying Man 2</string>
    <string name="crying_man_3">Crying Man 3</string>
    <string name="crying_woman_1">Crying Woman 1</string>
    <string name="crying_woman_2">Crying Woman 2</string>
    <string name="crying_woman_3">Crying Woman 3</string>
    <string name="crying_woman_4">Crying Woman 4</string>
    <string name="crying_woman_5">Crying Woman 5</string>
    <string name="sneeze_1">Sneeze 1</string>
    <string name="sneeze_2">Sneeze 2</string>
    <string name="sneeze_3">Sneeze 3</string>
    <string name="sneeze_4">Sneeze 4</string>
    <string name="sneeze_5">Sneeze 5</string>
    <string name="man_laugh_1">Man Laugh 1</string>
    <string name="man_laugh_2">Man Laugh 2</string>
    <string name="man_laugh_3">Man Laugh 3</string>
    <string name="man_laugh_4">Man Laugh 4</string>
    <string name="laugh_1">Laugh 1</string>
    <string name="laugh_2">Laugh 2</string>
    <string name="laugh_3">Laugh 3</string>
    <string name="laugh_4">Laugh 4</string>
    <string name="laugh_5">Laugh 5</string>
    <string name="baby_laugh_1">Baby Laugh 1</string>
    <string name="baby_laugh_2">Baby Laugh 2</string>
    <string name="baby_laugh_3">Baby Laugh 3</string>
    <string name="baby_laugh_4">Baby Laugh 4</string>
    <string name="baby_laugh_5">Baby Laugh 5</string>
    <string name="baby_laugh_6">Baby Laugh 6</string>

    <string name="ad_attribution">Ad</string>
    <string name="if_you_want_to_prank_someone_then_check_out_this_app">If you want to prank someone then check out this app: %1$s</string>
    <string name="share_via">Share via</string>
    <string name="_feedback">%1$s [Feedback]</string>
</resources>