<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/smoky_gray"
        tools:context=".ui.activities.SettingsActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/smoky_gray"
            android:fontFamily="@font/nunito_extra_bold"
            android:gravity="center"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:onClick="onIvBackClick"
            android:paddingStart="@dimen/_16dp"
            android:paddingEnd="@dimen/_6dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_language"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:onClick="onClLanguageClick">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_language_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:src="@drawable/ic_language"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_language_label"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_vertical"
                    android:text="@string/language"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    app:layout_constraintEnd_toStartOf="@+id/tv_selected_language"
                    app:layout_constraintStart_toEndOf="@+id/iv_language_icon" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_selected_language"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:drawableEnd="@drawable/ic_forward"
                    android:drawablePadding="@dimen/_10dp"
                    android:fontFamily="@font/nunito_medium_italic"
                    android:gravity="center_vertical"
                    android:text="@string/english"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_language_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_language">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_share"
                    android:drawablePadding="@dimen/_10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_vertical"
                    android:onClick="onTvShareClick"
                    android:paddingStart="@dimen/_16dp"
                    android:text="@string/share"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rate_us"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_rate_us"
                    android:drawablePadding="@dimen/_10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_vertical"
                    android:onClick="onTvRateUsClick"
                    android:paddingStart="@dimen/_16dp"
                    android:text="@string/rate_us"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    app:layout_constraintTop_toBottomOf="@+id/tv_share" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_privacy_policy"
                    android:drawablePadding="@dimen/_10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_vertical"
                    android:onClick="onTvPrivacyPolicyClick"
                    android:paddingStart="@dimen/_16dp"
                    android:text="@string/privacy_policy"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rate_us" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_feedback"
                    android:drawablePadding="@dimen/_10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center_vertical"
                    android:onClick="onTvFeedbackClick"
                    android:paddingStart="@dimen/_16dp"
                    android:text="@string/feedback"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    app:layout_constraintTop_toBottomOf="@+id/tv_privacy_policy" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>