<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="soundItem"
            type="com.example.pranksounds.data.models.SoundItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.PlaySoundActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/smoky_gray"
            android:fontFamily="@font/nunito_extra_bold"
            android:gravity="center"
            android:text="@{soundItem.title}"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:onClick="onIvBackClick"
            android:paddingStart="@dimen/_16dp"
            android:paddingEnd="@dimen/_6dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="@id/tv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_favourite"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:onClick="onIvFavClick"
            android:paddingStart="@dimen/_16dp"
            android:paddingEnd="@dimen/_16dp"
            android:src="@drawable/ic_fav"
            app:layout_constraintBottom_toBottomOf="@id/tv_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_header" />

        <FrameLayout
            android:id="@+id/fl_sound_icon"
            backgroundTintColor="@{soundItem.colorCode}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_play_sound_icon"
                imageFromDrawable="@{soundItem.bgImage}"
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_120dp"
                android:layout_margin="@dimen/_50dp"
                android:contentDescription="@string/sound_icon"
                tools:srcCompat="@tools:sample/avatars" />
        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".55" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/smoky_gray"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <ImageButton
            android:id="@+id/ib_play_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:background="@drawable/rounded_orange_button_background"
            android:contentDescription="@string/play_button"
            android:paddingStart="@dimen/_8dp"
            android:paddingTop="@dimen/_1dp"
            android:paddingEnd="@dimen/_8dp"
            android:paddingBottom="@dimen/_1dp"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/seekbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/iv_loop"
            app:layout_constraintStart_toEndOf="@+id/ib_play_sound"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_loop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/loop_button"
            android:padding="@dimen/_5dp"
            android:src="@drawable/ic_start_loop"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekbar"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_loop_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_extra_bold"
            android:text="@string/loop_off"
            app:layout_constraintEnd_toEndOf="@+id/iv_loop"
            app:layout_constraintStart_toStartOf="@+id/iv_loop"
            app:layout_constraintTop_toBottomOf="@+id/iv_loop" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".7" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/rounded_spinner_bg"
            android:paddingStart="@dimen/_15dp"
            android:paddingTop="@dimen/_7dp"
            android:paddingEnd="@dimen/_30dp"
            android:paddingBottom="@dimen/_7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <FrameLayout
            android:id="@+id/banner_ad_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>